Learn about multiple view in a single view page and implement it in code

--- a/ViewsExample/ViewsExample/Views/Home/Details.cshtml
+++ b/ViewsExample/ViewsExample/Views/Home/Details.cshtml
@@ -36,6 +36,7 @@
                     </tr>
                 </tbody>
             </table>
+            <a href="/home">Back to the home</a>
         }
         else
         {
