--- a/ViewsExample/ViewsExample/Views/Home/Index.cshtml
+++ b/ViewsExample/ViewsExample/Views/Home/Index.cshtml
@@ -85,6 +85,7 @@
                             <th>Person Name</th>
                             <th>Date of Birth</th>
                             <th>Gender</th>
+                            <th>Details</th>
                         </tr>
                     </thead>
                     <tbody>
@@ -93,6 +94,7 @@
                             <td>@per.DateOfBirth</td>
                             <td>@per.PersonGender</td>
                             @* <td>@number(RandomNumberGenerator())</td> *@
+                            <td><a href="/personDetails/@per.PersonName">Details</a></td>
                         </tr>
                     </tbody>
                 </table>
