Learn about Partial View with Strongly type

--- a/LayoutViewsExample/LayoutViewsExample/Views/Shared/_ProductLayout.cshtml
+++ b/LayoutViewsExample/LayoutViewsExample/Views/Shared/_ProductLayout.cshtml
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+﻿﻿<!DOCTYPE html>
+
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
@@ -6,9 +7,9 @@
     <link href="~/StyleSheet.css" rel="stylesheet" />
 </head>
 <body>
-    <div class="full-size-height">
-        <div class="flex-1 grey-black">SideBar</div>
-        <div class="flex-3 white-black">
+    <div class="flex full-size-height">
+        <div class="flex-1 grey-back">Sidebar</div>
+        <div class="flex-3 white-back">
             @RenderBody()
         </div>
     </div>
