--- a/LayoutViewsExample/LayoutViewsExample/Views/Shared/_Layout.cshtml
+++ b/LayoutViewsExample/LayoutViewsExample/Views/Shared/_Layout.cshtml
@@ -22,6 +22,9 @@
         <div class="page-content">
             @RenderBody()
         </div>
+        <div class="footer-content">
+            @RenderSection("footer_section", false)
+        </div>
     </div>
 </body>
 </html>
