--- a/PartialViewsExample/PartialViewsExample/Views/Home/Index.cshtml
+++ b/PartialViewsExample/PartialViewsExample/Views/Home/Index.cshtml
@@ -1,28 +1,20 @@
-﻿@{
-    ListModel listModel = new ListModel();
-    listModel.ListTitle = "Countries";
-    listModel.ListItems = new List<string>
-    {
-        "Bangladesh",
-        "USA",
-        "UK",
-        "Japan"
-    };
-}
+﻿<h1>Home</h1>
 
-<partial name="_ListPartialView"></partial>
+<button class="button button-blue-back" type="button" id="button-load">Load Programming Languages</button>
 
-@{
-    ViewData["ListTitle"] = "Countries";
-    ViewData["ListItem"] = new List<string>()
-            {
-                "Bangladesh",
-                "USA",
-                "UK",
-                "Japan"
-            };
-}
-
-<div class="box">
-    <partial name="_ListPartialView" model="listModel"></partial>
+<div class="box programming-languages-content">
 </div>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $("#button-load").on("click", function () {
+        $.ajax({
+            url: "programming-languages",
+            method: "GET",
+            success: function (languages) {
+                $(".programming-languages-content").html(languages);
+            }
+        });
+    });
+</script>
+
